<resources>
    <string name="app_name">capstone</string>
    <string name="hi">hi</string>
    <string name="start">start</string>
    <string name="stop">stop</string>
    <string name="pause">pause</string>
    <string name="dash">-</string>
    <string name="timer0">00:00</string>
    <string name="automow_demo">AutoMow Demo</string>
    <string name="app_desc">Current process length: 60s</string>
</resources>